# dotsandboxes-terminal

./: CMakeLists.txt  README.md
include/: platform.h
src/: main.c  platform.c
